# ansible-tic-tac-toe

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Readme.md  mkdocs.yml  playbook.yml  pyproject.toml
docs/: architecture.md  deployment.md  index.md
inventory/: hosts.ini
k8s/: deployment.yaml  service.yaml
roles/deploy_app/defaults/: main.yml
roles/deploy_app/meta/: main.yml
roles/deploy_app/tasks/: main.yml
scripts/: deploy_kubernetes.sh  plumber.py  sentry-release.sh
tests/: test_app.py  test_game.py
tic_tac_toe_ynov/: __init__.py  app.py  game.py
