[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe-ynov"
version = "0.1.0"
description = "Tic-tac-toe app used for the GitLab CI/CD workshop"
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0",
  "sentry-sdk[flask]>=2.20,<3.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "flake8>=7.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pre-commit>=3.7",
  "PyYAML>=6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["tic_tac_toe_ynov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["tic_tac_toe_ynov"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
